finita lezione funzioni

--- a/5. Funzioni.ipynb
+++ b/5. Funzioni.ipynb
@@ -9,11 +9,14 @@
     "- [Funzioni](#Funzioni)\n",
     "    - [Sintassi](#Sintassi)\n",
     "    - [Operatore \\*](#Operatore-*)\n",
+    "    - [Argomenti opzionali](#Argomenti-opzionali)\n",
+    "    - [Ordine delle chiamate](#Ordine-delle-chiamate)\n",
     "    - [Esercizio 1](#Esercizio-1)\n",
     "    - [Esercizio 2](#Esercizio-2)\n",
+    "    - [Esercizio 3](#Esercizio-2)\n",
     "    - [Valore di ritorno](#Valore-di-ritorno)\n",
-    "        - [Esercizio 3](#Esercizio-3)\n",
-    "        - [Esercizio 4](#Esercizio-4)"
+    "        - [Esercizio 4](#Esercizio-3)\n",
+    "        - [Esercizio 5](#Esercizio-4)"
    ]
   },
   {
@@ -25,12 +28,12 @@
     "===\n",
     "Spesso, quando si scrive codice, una certa sequenza di azioni viene utilizzata molte volte, magari con piccole differenze di contesto.\n",
     "\n",
-    "Supponiamo di creare un database di utenti, e di volerne di stampare via via le informazioni."
+    "Riprendiamo il database di utenti della lezione 3, e supponiamo di voler visualizzare le informazioni di ogni record via via che riempiamo la struttura dati."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,48 +50,38 @@
       "\n",
       "Nome: Alessandro\n",
       "Età: 31\n",
-      "Sesso: M\n",
-      "\n",
-      "Tutti gli utenti: [['Francesco', 30, 'M'], ['Elisa', 27, 'F'], ['Alessandro', 31, 'M']]\n"
+      "Sesso: M\n"
      ]
     }
    ],
    "source": [
     "users = []#database\n",
     "\n",
-    "francesco = ['Francesco', 30, 'M']\n",
-    "print('Nome:', francesco[0])\n",
-    "print('Età:', francesco[1])\n",
-    "print('Sesso:', francesco[2])\n",
+    "francesco = {'name':'Francesco', 'age':30, 'sex':'M'}\n",
+    "print('Nome:', francesco['name'])\n",
+    "print('Età:', francesco['age'])\n",
+    "print('Sesso:', francesco['sex'])\n",
     "users += [francesco]\n",
     "\n",
-    "elisa = ['Elisa', 27, 'F']\n",
-    "print('\\nNome:', elisa[0])#\\n inserisce un 'a capo'\n",
-    "print('Età:', elisa[1])\n",
-    "print('Sesso:', elisa[2])\n",
+    "elisa = {'name':'Elisa', 'age':27, 'sex':'F'}\n",
+    "print('\\nNome:', elisa['name'])#'\\n' inserisce un 'a capo'\n",
+    "print('Età:', elisa['age'])\n",
+    "print('Sesso:', elisa['sex'])\n",
     "users += [elisa]\n",
     "\n",
-    "alessandro = ['Alessandro', 31, 'M']\n",
-    "print('\\nNome:', alessandro[0])\n",
-    "print('Età:', alessandro[1])\n",
-    "print('Sesso:', alessandro[2])\n",
-    "users += [alessandro]\n",
+    "alessandro = {'name':'Alessandro', 'age':31, 'sex':'M'}\n",
+    "print('\\nNome:', alessandro['name'])\n",
+    "print('Età:', alessandro['age'])\n",
+    "print('Sesso:', alessandro['sex'])\n",
+    "users += [alessandro]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La stampa viene ripetuta per ogni nuovo utente: il codice è lungo e ripetitivo, ed è facile fare errori.\n",
     "\n",
-    "print('\\nTutti gli utenti:', users)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "La stampa viene ripetuta per ogni nuovo utente: il codice è lungo e ripetitivo, ed è facile fare errori."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='Sintassi'></a>\n",
     "Sintassi\n",
     "---\n",
     "Una *funzione* (o *metodo*) è una sequenza di azioni a cui si dà un nome, e che si può *chiamare* all'occorrenza. Abbiamo già visto ed usato alcune funzioni: tra le altre, print, len, title e sorted."
@@ -113,18 +106,19 @@
    "source": [
     "Il codice qui sopra non compila, è solo un esempio generale di funzione.\n",
     "\n",
+    "- *function_name* è il nome della funzione da usare al momento della chiamata\n",
     "- *argument_1* e *argument_2* sono detti *argomenti* e possono essere tanti a piacere\n",
+    "- il nome della funzione e la lista ordinata dei suoi argomenti è detta *firma*\n",
     "- gli argomenti  seguono un ordine, che deve essere rispettato al momento della chiamata\n",
     "- **def** è una keyword del linguaggio, come for e if\n",
-    "- *function_name* è il nome della funzione da usare al momento della chiamata\n",
     "- la definizione deve precedere la chiamata nell'ordine di scrittura del codice\n",
     "\n",
-    "Torniamo al nosto database, e proviamo a condensare in una funzione la stampa delle informazioni di utente."
+    "Torniamo al nosto database, e condensiamo in una funzione la stampa delle informazioni di un utente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,33 +136,29 @@
       "\n",
       "Nome: Alessandro\n",
       "Età: 31\n",
-      "Sesso: M\n",
-      "\n",
-      "Tutti gli utenti: [['Francesco', 30, 'M'], ['Elisa', 27, 'F'], ['Alessandro', 31, 'M']]\n"
+      "Sesso: M\n"
      ]
     }
    ],
    "source": [
-    "def show_user_info(name, age, sex):\n",
-    "    print('\\nNome:', name)\n",
-    "    print('Età:', age)\n",
-    "    print('Sesso:', sex)\n",
+    "def show_user_info(user):\n",
+    "    print('\\nNome:', user['name'])\n",
+    "    print('Età:', user['age'])\n",
+    "    print('Sesso:', user['sex'])\n",
     "    \n",
     "users = []\n",
     "\n",
-    "francesco = ['Francesco', 30, 'M']\n",
-    "show_user_info(francesco[0], francesco[1], francesco[2])\n",
+    "francesco = {'name':'Francesco', 'age':30, 'sex':'M'}\n",
+    "show_user_info(francesco)\n",
     "users += [francesco]\n",
     "\n",
-    "elisa = ['Elisa', 27, 'F']\n",
-    "show_user_info(elisa[0], elisa[1], elisa[2])\n",
+    "elisa = {'name':'Elisa', 'age':27, 'sex':'F'}\n",
+    "show_user_info(elisa)\n",
     "users += [elisa]\n",
     "\n",
-    "alessandro = ['Alessandro', 31, 'M']\n",
-    "show_user_info(alessandro[0], alessandro[1], alessandro[2])\n",
-    "users += [alessandro]\n",
-    "\n",
-    "print('\\nTutti gli utenti:', users)"
+    "alessandro = {'name':'Alessandro', 'age':31, 'sex':'M'}\n",
+    "show_user_info(alessandro)\n",
+    "users += [alessandro]"
    ]
   },
   {
@@ -177,12 +167,12 @@
    "source": [
     "Operatore *\n",
     "---\n",
-    "Il costrutto \\*lista permette di passare una lista ad un metodo, sotto forma di argomenti 'spacchettati'. L'ordine degli elementi della lista deve rispettare quello degli argomenti nella *firma* del metodo."
+    "Il costrutto \\*lista permette di passare una lista ad un metodo, sotto forma di argomenti 'spacchettati'. L'ordine degli elementi della lista deve rispettare quello degli argomenti nella firma del metodo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,15 +197,93 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Nome: Michael\n",
+      "Età: 30\n",
+      "Sesso: M\n"
+     ]
+    }
+   ],
+   "source": [
+    "michael = {'name':'Michael', 'age':30, 'sex':'M'}\n",
+    "show_user_info(*michael.values())#lista dei valori del dizionario"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una funzione può chiamarne un'altra, come nel caso di print negli esempi precedenti. Attenzione all'ordine di dichiarazione."
+    "**Attenzione**: nei due esempi precedenti, la funzione chiamata deve conoscere l'ordine dei campi della lista o del dizionario passati come argomento. Nel primo esempio, invece, devono essere noti al chiamato i nomi dei campi utente che si vogliono visualizzare."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Argomenti opzionali\n",
+    "---\n",
+    "Una funzione può avere degli *argomenti opzionali* (tanti a piacere). Questi devono seguire, nella *firma* del metodo, quelli obbligatori. Sono inizializzati con un valore di default (attraverso un *=*) e non conta l'ordine in cui vengono passati alla funzione."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Nome: Francesco\n",
+      "Età: 30\n",
+      "Sesso: M\n",
+      "Email: not available\n",
+      "\n",
+      "Nome: Giovanni\n",
+      "Età: 68\n",
+      "Sesso: M\n",
+      "Email: gio@mail.it\n"
+     ]
+    }
+   ],
+   "source": [
+    "def show_user_info(user_info, email='not available'):\n",
+    "    print('\\nNome:', user_info['name'])\n",
+    "    print('Età:', user_info['age'])\n",
+    "    print('Sesso:', user_info['sex'])\n",
+    "    print('Email:', email)\n",
+    "    \n",
+    "francesco = {'name':'Francesco', 'age':30, 'sex':'M'}\n",
+    "show_user_info(francesco)\n",
+    "\n",
+    "giovanni = {'name':'Giovanni', 'age':68, 'sex':'M'}\n",
+    "show_user_info(giovanni, email='gio@mail.it')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ordine delle chiamate\n",
+    "---\n",
+    "\n",
+    "Una funzione può chiamarne un'altra, come nel caso di print negli esempi precedenti. Attenzione all'ordine di dichiarazione.\n",
+    "\n",
+    "L'ordine delle chiamate è salvato nella *stack trace*: https://en.wikipedia.org/wiki/Stack_trace."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +301,7 @@
     "\n",
     "def fun_1(arg):\n",
     "    print('fun_1: sto chiamando fun_2')\n",
-    "    fun_2(arg)\n",
+    "    fun_2(arg)#f_1 chiama f_2, che deve essere già stata dichiarata\n",
     "    \n",
     "fun_1('ciao!')"
    ]
@@ -244,37 +312,10 @@
    "source": [
     "*Esercizio 1*\n",
     "---\n",
-    "- costruire un database di utenti con campi a piacere; il primo deve essere il nome\n",
-    "- scrivere una funzione che ordina gli utenti per nome e chiama show_contact_info per stamparne le info\n",
+    "- costruire un database di utenti con campi a piacere\n",
+    "- scrivere una funzione che ordina gli utenti per età (dal più piccolo) e chiama show_contact_info per stamparne le info; per ordinare per età crescente, usare il costrutto:\n",
+    "        sorted(users, key = lambda user : user['age']\n",
     "- testare il funzionamento con una chiamata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('a', 20), ('b', 10), ('c', 5)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#FILL ME\n",
-    "lst = [('b', 10), ('a', 20), ('c', 5)]\n",
-    "print(sorted(lst))#ordinamento rispetto al primo campo in liste miste"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*Esercizio 2*\n",
-    "---\n",
-    "Dato il database di utenti costruito all'Esercizio 1, scrivere una funzione che stampa SOLO i nomi degli utenti in ordine alfabetico, usando una comprensione di lista."
    ]
   },
   {
@@ -283,7 +324,117 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#FILL ME"
+    "def show_user_info(user):\n",
+    "    print('\\nNome:', user['name'])\n",
+    "    print('Età:', user['age'])\n",
+    "    print('Sesso:', user['sex'])\n",
+    "\n",
+    "def show_all_users_by_age(users):\n",
+    "    #FILL ME"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nell'esercizio precedente abbiamo usato la keyword *lambda*. In particolare, la funzione sorted accetta un argomento (opzionale) *key* che specifica il criterio in cui gli elementi devono essere ordinati.\n",
+    "\n",
+    "Utilizzare lambda, nel nostro esempio, equivale a definire una funzione 'sul posto' che, preso un utente, ne restituisce l'età. Questa viene associata a key, e serve alla funzione sorted come criterio di ordinamento. Quando si tratta di numeri, l'ordinamento è per convenzione crescente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Montagne per altezza (dalla più bassa):\n",
+      "{'name': 'Kangchenjunga', 'height': 8586, 'country': 'Nepal'}\n",
+      "{'name': 'K2', 'height': 8611, 'country': 'Pakistan'}\n",
+      "{'name': 'Mount Everest', 'height': 8858, 'country': 'Nepal'}\n",
+      "\n",
+      "Montagne per altezza (dalla più alta):\n",
+      "{'name': 'Mount Everest', 'height': 8858, 'country': 'Nepal'}\n",
+      "{'name': 'K2', 'height': 8611, 'country': 'Pakistan'}\n",
+      "{'name': 'Kangchenjunga', 'height': 8586, 'country': 'Nepal'}\n",
+      "\n",
+      "Montagne in ordine alfabetico:\n",
+      "{'name': 'K2', 'height': 8611, 'country': 'Pakistan'}\n",
+      "{'name': 'Kangchenjunga', 'height': 8586, 'country': 'Nepal'}\n",
+      "{'name': 'Mount Everest', 'height': 8858, 'country': 'Nepal'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mountains = []\n",
+    "\n",
+    "mountains += [{'name':'Mount Everest', 'height':8858, 'country':'Nepal'}]\n",
+    "mountains += [{'name':'K2', 'height':8611, 'country':'Pakistan'}]\n",
+    "mountains += [{'name':'Kangchenjunga', 'height':8586, 'country':'Nepal'}]\n",
+    "\n",
+    "print('Montagne per altezza (dalla più bassa):')\n",
+    "for m in sorted(mountains, key = lambda mountain : mountain['height']):\n",
+    "    print(m)\n",
+    "    \n",
+    "print('\\nMontagne per altezza (dalla più alta):')\n",
+    "for m in sorted(mountains, key = lambda mountain : -mountain['height']):\n",
+    "    print(m)\n",
+    "    \n",
+    "print('\\nMontagne in ordine alfabetico:')\n",
+    "for m in sorted(mountains, key = lambda mountain : mountain['name']):\n",
+    "    print(m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le lambda sono funzioni a tutti gli effetti, con l'unica differenza di essere anonime. Si usano quando una funzione viene chiamata una sola volta o, più esattamente, in una sola riga del codice. Per saperne di più sulle funzioni lambda: \n",
+    "\n",
+    "- http://www.secnetix.de/olli/Python/lambda_functions.hawk\n",
+    "- https://stackoverflow.com/questions/890128/why-are-python-lambdas-useful\n",
+    "- https://www.python-course.eu/python3_lambda.php"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Esercizio 2*\n",
+    "---\n",
+    "Ripetere l'Esercizio 1, passando alla funzione che stampa tutti i contatti anche il campo in base al quale fare l'ordinamento. Questo deve essere opzionale, e l'ordinamento di default deve essere per nome."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_all_users_by_field(...):\n",
+    "    #FILL ME"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Esercizio 3*\n",
+    "---\n",
+    "Dato il database di utenti costruito con gli esercizi precedenti, scrivere una funzione che stampa SOLO i nomi degli utenti in ordine alfabetico, usando una comprensione di lista."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_names_alphabetically(users):\n",
+    "    #FILL ME"
    ]
   },
   {
@@ -297,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +464,7 @@
        "50"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,15 +481,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Esercizio 3\n",
+    "### Esercizio 4\n",
     "\n",
-    "Immaginiamo di dover riempire il database di utenti da zero. Scrivere una funzione che, presi in ingresso il nuovo utente e il database,\n",
+    "Immaginiamo di dover riempire il database di utenti da zero. Scrivere una funzione che, presi in ingresso un nuovo utente e il database,\n",
     "\n",
     "- stampa le informazioni dell'utente, usando show_user_info\n",
     "- aggiunge l'utente al database solo se è maggiorenne\n",
     "- restituisce il database aggiornato\n",
     "\n",
-    "Inserire utenti maggiorenni e non e verificare con una stampa che il database contenga tutti e soli i maggiorenni inseriti."
+    "Inserire utenti maggiorenni e minorenni e verificare con una stampa che il database contenga tutti e soli i maggiorenni inseriti."
    ]
   },
   {
@@ -352,8 +503,7 @@
     "\n",
     "adult_users = []#database\n",
     "\n",
-    "adult_users = show_and_add_if_adult(['Francesco', 30, 'M'], adult_users)\n",
-    "adult_users = show_and_add_if_adult(['Niccolò', 16, 'M'], adult_users)\n",
+    "adult_users = show_and_add_if_adult({'name':'Francesco', 'age':30, 'sex':'M'}, adult_users)\n",
     "\n",
     "print(adult_users)"
    ]
@@ -362,9 +512,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *Esercizio 4*\n",
+    "### *Esercizio 5*\n",
     "\n",
-    "Ripetere l'esercizio 3, ma utilizzando una funzione esterna per controllare se un utente è maggiorenne."
+    "Ripetere l'Esercizio 3, ma utilizzando una funzione esterna per controllare se un utente è maggiorenne."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FILL ME"
    ]
   },
   {
