--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -296,6 +296,24 @@
     "print('\\nUtenti maggiorenni:')\n",
     "for a in adult_users : show_user_info(a)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script>\n",
+    "  $(document).ready(function(){\n",
+    "    $('div.back-to-top').hide();\n",
+    "    $('nav#menubar').hide();\n",
+    "    $('div.prompt').hide();\n",
+    "    $('.hidden-print').hide();\n",
+    "  });\n",
+    "</script>\n",
+    "\n",
+    "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
+    "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
+    "</footer>"
+   ]
   }
  ],
  "metadata": {
