aggiunta lezione if

--- a/2. Liste, cicli e comprensioni.ipynb
+++ b/2. Liste, cicli e comprensioni.ipynb
@@ -18,8 +18,9 @@
     "    - [*Slicing* e copia](#Slicing-e-copia)\n",
     "    - [*Esercizio 2*](#Esercizio-2)\n",
     "- [Cicli *for*](#Cicli-for)\n",
+    "    - [Enumerazione](#Enumerazione)\n",
     "    - [*Esercizio 3*](#Esercizio-3)\n",
-    "- [Comprensioni di liste](#Comprensioni-di-liste)\n",
+    "    - [Comprensioni di liste](#Comprensioni-di-liste)\n",
     "    - [*Esercizio 4*](#Esercizio-4)"
    ]
   },
@@ -58,7 +59,7 @@
    "source": [
     "Dimensione e accesso indicizzato\n",
     "---\n",
-    "La *dimensione* di una lista si ottiene con la *funzione* (o *metodo*) *len* (da *length*, lunghezza in inglese). Vedremo in dettaglio cosa è una funzione nelle lezioni successive."
+    "La *dimensione* di una lista si ottiene con la *funzione* (o *metodo*) *len* (da *length*, lunghezza in inglese). Vedremo in dettaglio cosa è una funzione nella lezione 5."
    ]
   },
   {
@@ -614,7 +615,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In entrambi i casi, l'argomento *reverse* è *False* per default. Se non si specifica, l'ordinamento sarà quello naturale (dalla A alla Z, crescente,...)."
+    "In entrambi i casi, l'argomento *reverse* è *False* per default. Se non si specifica diversamente, l'ordinamento sarà quello naturale (dalla A alla Z, crescente, eccetera).\n",
+    "\n",
+    " Vedremo il significato di True e False nella lezione 4, e quello degli argomenti opzionali di una funzione nella lezione 5."
    ]
   },
   {
@@ -1302,7 +1305,7 @@
    "metadata": {},
    "source": [
     "Comprensioni di liste\n",
-    "===\n",
+    "---\n",
     "Come abbiamo visto nell'esercizio precedente, la costruzione di una lista a partire da una di partenza attraverso un ciclo è un po' macchinosa."
    ]
   },
