--- a/3. Dizionari.ipynb
+++ b/3. Dizionari.ipynb
@@ -11,8 +11,8 @@
     "    - [Accesso](#Accesso)\n",
     "    - [Operazioni su dizionario](#Operazioni-su-dizionario)\n",
     "    - [Ciclo sugli elementi di un dizionario](#Ciclo-sugli-elementi-di-un-dizionario)\n",
-    "    - [Esercizio 1](#Esercizio-1)\n",
-    "    - [Esercizio 2](#Esercizio-2)"
+    "    - [*Esercizio 1*](#Esercizio-1)\n",
+    "    - [*Esercizio 2*](#Esercizio-2)"
    ]
   },
   {
