--- a/5. Funzioni.ipynb
+++ b/5. Funzioni.ipynb
@@ -11,19 +11,18 @@
     "    - [Operatore \\*](#Operatore-*)\n",
     "    - [Argomenti opzionali](#Argomenti-opzionali)\n",
     "    - [Ordine delle chiamate](#Ordine-delle-chiamate)\n",
-    "    - [Esercizio 1](#Esercizio-1)\n",
-    "    - [Esercizio 2](#Esercizio-2)\n",
-    "    - [Esercizio 3](#Esercizio-2)\n",
+    "    - [*Esercizio 1*](#Esercizio-1)\n",
+    "    - [*Esercizio 2*](#Esercizio-2)\n",
+    "    - [*Esercizio 3*](#Esercizio-3)\n",
     "    - [Valore di ritorno](#Valore-di-ritorno)\n",
-    "        - [Esercizio 4](#Esercizio-3)\n",
-    "        - [Esercizio 5](#Esercizio-4)"
+    "        - [*Esercizio 4*](#Esercizio-4)\n",
+    "        - [*Esercizio 5*](#Esercizio-5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Funzioni'></a>\n",
     "Funzioni\n",
     "===\n",
     "Spesso, quando si scrive codice, una certa sequenza di azioni viene utilizzata molte volte, magari con piccole differenze di contesto.\n",
@@ -481,8 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Esercizio 4\n",
-    "\n",
+    "### *Esercizio 4*\n",
     "Immaginiamo di dover riempire il database di utenti da zero. Scrivere una funzione che, presi in ingresso un nuovo utente e il database,\n",
     "\n",
     "- stampa le informazioni dell'utente, usando show_user_info\n",
