--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -105,6 +105,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "4.1, 4.2\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Il quadrato di 3 è 9, che è multiplo di 3 ma non di 2\n",
+      "Il quadrato di 6 è 36, che è multiplo sia di 2 che di 3\n",
+      "Il quadrato di 5 è 25, che non è multiplo né di 2 né di 3\n",
+      "Il quadrato di 8 è 64, che è multiplo di 2 ma non di 3\n",
+      "Il quadrato di 12 è 144, che è multiplo sia di 2 che di 3\n",
+      "\n",
+      "*******************\n",
+      "\n",
+      "[36, 64, 144]\n",
+      "[9, 36, 144]\n",
+      "[64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [3,6,5,8,12]\n",
+    "\n",
+    "for element in lst:\n",
+    "    if element**2 % 2 == 0 and element**2 % 3 == 0:\n",
+    "        print('Il quadrato di %d è %d, che è multiplo sia di 2 che di 3' % (element, element**2))\n",
+    "    elif element**2 % 2 == 0:\n",
+    "        print('Il quadrato di %d è %d, che è multiplo di 2 ma non di 3' % (element, element**2))\n",
+    "    elif element**2 % 3 == 0:\n",
+    "        print('Il quadrato di %d è %d, che è multiplo di 3 ma non di 2' % (element, element**2))\n",
+    "    else:\n",
+    "        print('Il quadrato di %d è %d, che non è multiplo né di 2 né di 3' %  (element, element**2))\n",
+    "        \n",
+    "print('\\n*******************\\n')\n",
+    "\n",
+    "multiples_of_2 = [element**2 for element in lst if element**2 % 2 == 0]\n",
+    "multiples_of_3 = [element**2 for element in lst if element**2 % 3 == 0]\n",
+    "multiples_of_2_and_not_of_3 = [element**2 for element in lst if element**2 % 2 == 0 and not element**2 % 3 == 0]\n",
+    "\n",
+    "print(multiples_of_2)\n",
+    "print(multiples_of_3)\n",
+    "print(multiples_of_2_and_not_of_3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5.1, 5.2, 5.3\n",
     "---"
    ]
