iniziata lezione numpy

--- a/1. Variabili, stringhe e numeri.ipynb
+++ b/1. Variabili, stringhe e numeri.ipynb
@@ -25,7 +25,9 @@
     "---\n",
     "Questo tutorial è ispirato a http://introtopython.org.\n",
     "\n",
-    "Su https://docs.python.org/3 trovate la documentazione ufficiale del linguaggio Python."
+    "Su https://docs.python.org/3 trovate la documentazione ufficiale del linguaggio Python.\n",
+    "\n",
+    "Il *Python Data Science Handbook*, http://shop.oreilly.com/product/0636920034919.do, è un ottimo libro per imparare Python nel contesto della data science."
    ]
   },
   {
