--- a/2. Liste, cicli e comprensioni.ipynb
+++ b/2. Liste, cicli e comprensioni.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "Dimensione e accesso indicizzato\n",
     "---\n",
-    "La *dimensione* di una lista si ottiene con la *funzione* (o *metodo*) *len* (da *length*, lunghezza in inglese). Vedremo in dettaglio cosa è una funzione nella lezione 5."
+    "La *dimensione* di una lista si ottiene con la *funzione* (o *metodo*) *len* (da *length*, lunghezza in inglese). Vedremo in dettaglio cosa è una funzione nella Lezione 5."
    ]
   },
   {
@@ -617,7 +617,7 @@
    "source": [
     "In entrambi i casi, l'argomento *reverse* è *False* per default. Se non si specifica diversamente, l'ordinamento sarà quello naturale (dalla A alla Z, crescente, eccetera).\n",
     "\n",
-    " Vedremo il significato di True e False nella lezione 4, e quello degli argomenti opzionali di una funzione nella lezione 5."
+    " Vedremo il significato di True e False nella Lezione 4, e quello degli argomenti opzionali di una funzione nella Lezione 5."
    ]
   },
   {
@@ -867,6 +867,85 @@
    ],
    "source": [
     "print(letters[3:6])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Oltre ad inizio e fine della fetta, si può specificare anche lo *step*, cioè la spaziatura tra i valori estratti."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [0,1,2,3,4,5,6,7,8,9,10]\n",
+    "print(numbers[2:6:2])#l'ultimo campo è step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_numbers = numbers[::2]\n",
+    "print(odd_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "odd_numbers = numbers[1::2]\n",
+    "print(odd_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "odd_numbers_lower_than_5 = numbers[1:5:2]\n",
+    "print(odd_numbers_lower_than_5)"
    ]
   },
   {
