--- a/5. Funzioni.ipynb
+++ b/5. Funzioni.ipynb
@@ -27,7 +27,7 @@
     "===\n",
     "Spesso, quando si scrive codice, una certa sequenza di azioni viene utilizzata molte volte, magari con piccole differenze di contesto.\n",
     "\n",
-    "Riprendiamo il database di utenti della lezione 3, e supponiamo di voler visualizzare le informazioni di ogni record via via che riempiamo la struttura dati."
+    "Riprendiamo il database di utenti della Lezione 3, e supponiamo di voler visualizzare le informazioni di ogni record via via che riempiamo la struttura dati."
    ]
   },
   {
