aggiunto footer a lezione 6

--- a/6. La libreria numpy.ipynb
+++ b/6. La libreria numpy.ipynb
@@ -1180,6 +1180,24 @@
    "source": [
     "A.flatten()[::-1].reshape(A.shape)#spiaccico, inverto e rimodello"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script>\n",
+    "  $(document).ready(function(){\n",
+    "    $('div.back-to-top').hide();\n",
+    "    $('nav#menubar').hide();\n",
+    "    $('div.prompt').hide();\n",
+    "    $('.hidden-print').hide();\n",
+    "  });\n",
+    "</script>\n",
+    "\n",
+    "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
+    "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
+    "</footer>"
+   ]
   }
  ],
  "metadata": {
